# dehli-musikk-sample-plugins

./: .gitignore  CMakeLists.txt  README.md  dmse
packaging/: PACKAGING.md  dmse-completion.sh
packaging/linux/: install_template.sh  make_tarballs.sh
packaging/macos/: Standalone.entitlements  package_all.sh  sign_and_package.sh
packaging/windows/: installer.iss  make_installers.ps1
